fixed footer overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,7 @@
     transform: rotate(360deg);
   }
 } */
+
+body {
+  overflow-x: hidden;
+}
